--- a/src/styles/cinema.css
+++ b/src/styles/cinema.css
@@ -177,9 +177,6 @@ body {
     margin-left: 10px;
     font-size: 15px;
 }
-.seat.selected {
-    background-color: red;
-}
 .info_seat {
     display: flex;
     justify-content: center;  
@@ -187,13 +184,12 @@ body {
     width: auto;              
     height: 40px;
     margin-top: -5px;
-    margin-bottom: 17px;
 }
 .info_seat img {
     width: 280px;
     height: auto;            
 }
-.date2 {
+.date {
     display: flex;
     flex-direction: column;
     width: auto;
@@ -246,53 +242,41 @@ body {
     border-radius: 7px;
     margin-right: 15px;
 }
-a:link, a:visited {
-    text-decoration: none; 
-    color: inherit;    
-}
-
-.buy_ticket_link {
-    text-decoration: none;
-}
-
 .bottom {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: auto;
     height: 80px;
-    margin-top: 10px;
+    margin-top: 140px;
     margin-left: 20px;
     margin-right: 20px;
 }
-
 .price_container {
     width: 100px;
     height: 65px;
+    margin-top: 7px;
     margin-left: 7px;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: flex;              
+    justify-content: center;    
+    align-items: center;       
     text-align: center;
 }
-
 .price_number {
-    margin-top: 40px;
-    font-weight: bold;
+    margin-top: 40px;       
+    font-weight: bold;       
 }
-
 .buy_ticket {
-    width: 200px;
+    width: 200px;              
     height: 65px;
     background-color: red;
     color: white;
     border-radius: 7px;
     margin-top: 7px;
-    margin-left: auto;
+    margin-left: 30px;
     margin-right: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+    display: flex;            
+    justify-content: center;    
+    align-items: center;      
+    text-decoration: none;    
 }
