--- a/src/styles/cinema.css
+++ b/src/styles/cinema.css
@@ -1,7 +1,6 @@
 /* cinemaStyles.css */
 body {
     background-color: #121212;
-    padding-bottom: 20px;
 }
 .upper {
     display: flex;
@@ -212,6 +211,7 @@ body {
     border-radius: 7px;
     margin-right: 15px; 
     color: white;
+    margin-left: 20px;
 }
 .day_container {
     background-color: white;
@@ -233,6 +233,7 @@ body {
     border-radius: 7px;
     margin-right: 15px;
     color: white;
+    margin-left: 20px;
 }
 .hour_container {
     background-color: white;
@@ -246,7 +247,7 @@ body {
     flex-direction: row;
     width: auto;
     height: 80px;
-    margin-top: 15px;
+    margin-top: 140px;
     margin-left: 20px;
     margin-right: 20px;
 }
