--- a/src/styles/details.css
+++ b/src/styles/details.css
@@ -25,7 +25,7 @@ body {
     height: 25px;
     border-radius: 100%;
     border: 1px solid gray;
-    margin-top: 23px;
+    margin-top: 32px;
     margin-left: 20px;
 }
 .back img {
@@ -37,7 +37,7 @@ body {
     margin-right: 20px;
 }
 .dots img {
-    margin-top: -7px;
+    margin-top: 37px;
     width: 30px;
     height: 30px;
 }
@@ -126,9 +126,6 @@ body {
     white-space: nowrap;
     scrollbar-width: none; 
     margin-bottom: 20px;
-}
-.cast::-webkit-scrollbar {
-    display: none;
 }
 .actor1 {
     display: flex;
@@ -219,6 +216,7 @@ body {
     left: 0;
     width: 100%;
     margin: 0;
+    margin-bottom: 10px;
 }
 .footer-link {
     display: block;
@@ -226,22 +224,24 @@ body {
     height: 100%;
     text-decoration: none;
 }
-
 .footer__ul2 {
     height: 55px;
     width: auto;
     display: flex;
-    flex-direction: row;
+    justify-content: center; 
+    align-items: center;
     border-radius: 20px;
-    padding-right: 40px;
-    margin: 25px;
-    background-color: rgb(255, 0, 0);
+    margin-left: 30px;
+    margin-right: 30px;
+    background-color: red;
+    padding: 0; 
 }
 .footer__ul2 li {
-    list-style: none;           
+    list-style: none;
 }
 .footer__ul2 li p {
-    text-align: justify;
+    text-align: center;
     font-size: 13px;
     color: white;
+    margin: 0; 
 }
