--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,6 +52,8 @@
     height: 50px;
     margin-left: 20px;  
     margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
     padding: 0;
     display: flex;
@@ -97,12 +99,26 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
-    width: auto;
+    width: 100%;  
     height: 400px;
     overflow-x: auto;
-    white-space: nowrap;
-    max-width: 100%; 
+    white-space: nowrap; 
+    max-width: 100%;
+    scroll-behavior: smooth;
 }
+
+.scroll ul {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.scroll li {
+    margin-right: 20px; 
+}
+
 .movie-card {
     width: 200px;
     background-color: #272727;
@@ -112,17 +128,18 @@
     margin-left: 20px;
     color: white;
 }
+
 .movie-card .poster img {
-    width: 100%;
+    width: 90%;
     height: auto;
-    margin-left: -30px;
     margin-top: 7px;
 }
+
 .details {
-    padding-top: 13px;
     padding-left: 10px;
     padding-right: 7px;
 }
+
 .details h3 {
     font-size: 16px;
     font-weight: bold;
@@ -131,32 +148,18 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .details p {
     font-size: 14px;
     color: #888;
     margin-bottom: 15px;
 }
-.dots {
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    margin-top: 15px;
-}
-.poster {
-    width: 180px;
-    height: 280px;
-    margin-left: 25px;
-    border-radius: 20px;
-}
+
 .scroll a {
     text-decoration: none;
     color: inherit;
 }
-.scroll li {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+
 .dots span {
     width: 8px;
     height: 8px;
@@ -184,44 +187,43 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    padding: 10px 0;
 }
+
 .footer__ul {
     background: linear-gradient(to right, #232323, #161616);
     border: 1px solid #000;
     height: 75px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     border-radius: 15px;
+    margin: 0;
+    padding: 0;
 }
+
 .footer__ul li {
-    list-style: none;   
-    border-radius: 100%;
-    height: 40px;
-    width: 40px;
+    list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 15px;
+    text-align: center;
+    gap: 5px;
 }
+
 .footer__ul li a {
-    display: flex;
+    display: block;
 }
-.footer__ul li a img {
-    object-fit: contain;
+
+.footer__ul li img {
+    width: 24px;
+    height: auto;
+    margin-bottom: 5px;
 }
+
 .footer__ul li p {
     font-size: 13px;
-    color: red;
-}
-.footer__ul li p1 {
-    font-size: 13px;
-}
-.footer__ul li p2 {
-    font-size: 13px;
-}
-.footer__ul li p3 {
-    font-size: 13px;
+    color: white;
+    margin: 0;
 }
